# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]

## [1.17-0.3.0.0]
### Added
- Light Element enchantment.
- Recipes to upgrade Laser Blade.
  - Enchanting with Light Element, enchanting with Silk Touch, and increasing attack speed.
  - In a multiplayer game, the client-side mod has to be the same version as the server-side.
- Item tags to specify the ingredients of each upgrade.

## [1.17-0.2.1.0]
### Added
- Laser Trap.
- Another Laser Blade recipe.

## [1.17-0.2.0.0]
### Added
- Recipes to change color of Laser Blade.
  - In a multiplayer game, the client-side mod has to be the same version as the server-side.

## [1.17-0.1.0.0]
### Added
- Laser Blade item.
- Laser Blade (fireproof) item.
- Laser Blade model.
- Laser Blade renderer.